<resources>
  <string name="app_name">ToDo</string>
  <string name="createnew">Create New</string>
  <string name="today">Today</string>
  <string name="tomorrow">Tomorrow</string>
  <string name="name">Or Add Remainder</string>
  <string name="isChore">Select a Chore</string>
  <string name="pickDate">Pick a Date</string>
  <string name="buttonToday">Today</string>
  <string name="buttonTomorrow">Tomorrow</string>
  <string name="date_button_set">Set date</string>
  <string name="date_selected">selected date</string>
  <string name="save">Add to list</string>
  <string name="saveName">Save Name</string>
  <string name="add">Add New</string>
  <string name="rest">Rest</string>
</resources>
