<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.codeclan.todo.CreateNewActivity"
  android:orientation="vertical">


  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name"/>


  <EditText
    android:id="@+id/editTextName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="text"
    android:layout_gravity="center"
     />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/isChore"/>

  <CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/pickDate"/>

  <CalendarView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"></CalendarView>


  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="chooseToday"
    android:text="@string/buttonToday"/>
  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="chooseTomorrow"
    android:text="@string/buttonTomorrow"/>




  <Button
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="70dp"
    android:onClick="setDate"
    android:text="@string/date_button_set" />

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/button1"
    android:text="@string/date_selected"
    android:textAppearance="?android:attr/textAppearanceMedium" />



</LinearLayout>
